--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "formik": "^2.4.5",
+    "framer-motion": "^11.3.31",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
@@ -35,7 +36,7 @@
     "react-spinners": "^0.13.8",
     "resend": "^3.1.0",
     "sonner": "^1.4.0",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
