--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
