--- a/package.json
+++ b/package.json
@@ -11,25 +11,34 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.16",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
+    "@mui/x-charts": "^7.15.0",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-three/drei": "^9.111.5",
+    "@react-three/fiber": "^8.17.6",
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.5",
-    "framer-motion": "^11.3.31",
+    "framer-motion": "^11.9.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.49.3",
@@ -39,6 +48,8 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
+    "three-globe": "^2.31.1",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zod-formik-adapter": "^1.2.0"
