--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.9.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-auth": "^5.0.0-beta.5",
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
