--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.16",
     "@emotion/react": "^11.13.3",
@@ -45,6 +48,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-spinners": "^0.13.8",
     "resend": "^3.1.0",
     "sonner": "^1.4.0",
@@ -70,6 +74,7 @@
     "postcss": "^8",
     "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
