--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
-  },
-  "prisma": {
+    "postinstall": "prisma generate",
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
@@ -23,6 +21,7 @@
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-three/drei": "^9.111.5",
@@ -49,6 +48,7 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-resizable": "^3.0.5",
     "react-spinners": "^0.13.8",
     "resend": "^3.1.0",
     "sonner": "^1.4.0",
@@ -67,6 +67,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-resizable": "^3.0.8",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
